--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <h3>About Me</h3>
     <p>Hello there! My name is Jack, and I'm a first-year undergraduate student at the University of Toronto with interests in mathematics, physics, engineering and quantum computing.</p>
     <p>Over the past couple years, I have had some very interesting experiences.
-This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a> 
+This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
 (and in the process, writing some material for an online <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a>),
-and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>. 
-I'm very involved in open-source quantum computational software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
+and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.
+I'm very involved in open-source quantum computational software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields.
     </p>
     <h3>Current Projects</h3>
 <p>
-  I am currently working as 
-  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing tutorials on concepts in quantum machine learning and helping to build 
+  I am currently working as
+  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing tutorials on concepts in quantum machine learning and helping to build
   out their <a href="https://pennylane.ai/">quantum machine learning library</a>.
 </p>
 
@@ -52,8 +52,10 @@ I'm very involved in open-source quantum computational software, and have contri
     <ul>
 	<br>
 	<a href="./feed.html">The Feed</a>
+  <br>
+  <a href="./list.html">The List</a>
 	<br><br>
-      <b>UNDER RENOVATIONS (August 1st, 2020)</b>
+      <b>UNDER RENOVATIONS (November 20th, 2020)</b>
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
