--- a/math/artin/winter_group.html
+++ b/math/artin/winter_group.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-11-26 Thu 21:28 -->
+<!-- 2020-11-26 Thu 22:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>UofT Undergraduate Winter Math Reading Group</title>
@@ -250,22 +250,22 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc83e1c2">1. Information</a>
+<li><a href="#orga8b85b6">1. Information</a>
 <ul>
-<li><a href="#orgb0db69a">1.1. Goals</a></li>
-<li><a href="#org1c0dc58">1.2. Details</a></li>
+<li><a href="#orgda09f35">1.1. Goals</a></li>
+<li><a href="#orgdaf151f">1.2. Details</a></li>
 </ul>
 </li>
-<li><a href="#org3e8d1dc">2. Reading Schedule</a></li>
-<li><a href="#orgfe962ff">3. Solutiond and Notes</a></li>
-<li><a href="#org4ac1a81">4. Further Resources</a></li>
-<li><a href="#orgd2a9a6e">5. People</a></li>
+<li><a href="#org17629dd">2. Reading Schedule</a></li>
+<li><a href="#orgfad3791">3. Solutions and Notes</a></li>
+<li><a href="#orgc7cd1b0">4. Further Resources</a></li>
+<li><a href="#org3f76d9e">5. People</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgc83e1c2" class="outline-2">
-<h2 id="orgc83e1c2"><span class="section-number-2">1</span> Information</h2>
+<div id="outline-container-orga8b85b6" class="outline-2">
+<h2 id="orga8b85b6"><span class="section-number-2">1</span> Information</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Welcome to the website for the University of Toronto Undegraduate Winter Math Reading Group!
@@ -277,8 +277,8 @@ Michael Artin's <i>Algebra</i>. This book is supposed to provide a rigorous and 
 </p>
 </div>
 
-<div id="outline-container-orgb0db69a" class="outline-3">
-<h3 id="orgb0db69a"><span class="section-number-3">1.1</span> Goals</h3>
+<div id="outline-container-orgda09f35" class="outline-3">
+<h3 id="orgda09f35"><span class="section-number-3">1.1</span> Goals</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 The goals of this reading group are as follows:
@@ -292,15 +292,15 @@ The goals of this reading group are as follows:
 </div>
 </div>
 
-<div id="outline-container-org1c0dc58" class="outline-3">
-<h3 id="org1c0dc58"><span class="section-number-3">1.2</span> Details</h3>
+<div id="outline-container-orgdaf151f" class="outline-3">
+<h3 id="orgdaf151f"><span class="section-number-3">1.2</span> Details</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 In this reading group, we respect copyright laws, so if you don't have a copy of Artin's book, you definitely <b>should not</b> Google "Artin Algebra PDF" and download the first link.
 </p>
 
 <p>
-To communicate/ask questions during the week, we have a Slack channel to which each member of the group will be invited.
+To communicate/ask questions during the week, we have a Discord server to which each member of the group will be invited.
 </p>
 
 <p>
@@ -310,8 +310,8 @@ Any inquiries about joining the reading group, or any other questions should be 
 </div>
 </div>
 
-<div id="outline-container-org3e8d1dc" class="outline-2">
-<h2 id="org3e8d1dc"><span class="section-number-2">2</span> Reading Schedule</h2>
+<div id="outline-container-org17629dd" class="outline-2">
+<h2 id="org17629dd"><span class="section-number-2">2</span> Reading Schedule</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 TBD
@@ -319,8 +319,8 @@ TBD
 </div>
 </div>
 
-<div id="outline-container-orgfe962ff" class="outline-2">
-<h2 id="orgfe962ff"><span class="section-number-2">3</span> Solutiond and Notes</h2>
+<div id="outline-container-orgfad3791" class="outline-2">
+<h2 id="orgfad3791"><span class="section-number-2">3</span> Solutions and Notes</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 The notes and solutions created by the members of the group will be posted here each week.
@@ -328,8 +328,8 @@ The notes and solutions created by the members of the group will be posted here 
 </div>
 </div>
 
-<div id="outline-container-org4ac1a81" class="outline-2">
-<h2 id="org4ac1a81"><span class="section-number-2">4</span> Further Resources</h2>
+<div id="outline-container-orgc7cd1b0" class="outline-2">
+<h2 id="orgc7cd1b0"><span class="section-number-2">4</span> Further Resources</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Under Construction
@@ -337,8 +337,8 @@ Under Construction
 </div>
 </div>
 
-<div id="outline-container-orgd2a9a6e" class="outline-2">
-<h2 id="orgd2a9a6e"><span class="section-number-2">5</span> People</h2>
+<div id="outline-container-org3f76d9e" class="outline-2">
+<h2 id="org3f76d9e"><span class="section-number-2">5</span> People</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 The names of the members of the group will be posted below.
@@ -346,13 +346,17 @@ The names of the members of the group will be posted below.
 
 <ul class="org-ul">
 <li><a href="https://lucaman99.github.io">Jack Ceroni</a> (Organizer)</li>
+<li>Maya Rehem</li>
+<li>Peter Ma</li>
+<li>Freeman Cheng</li>
+<li>Diba Heydary</li>
 </ul>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2020-11-26 Thu 21:28</p>
+<p class="date">Created: 2020-11-26 Thu 22:49</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
