--- a/math/artin/winter_group.html
+++ b/math/artin/winter_group.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-11-26 Thu 22:49 -->
+<!-- 2020-11-26 Thu 23:13 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>UofT Undergraduate Winter Math Reading Group</title>
@@ -250,22 +250,22 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orga8b85b6">1. Information</a>
+<li><a href="#orgb333d1c">1. Information</a>
 <ul>
-<li><a href="#orgda09f35">1.1. Goals</a></li>
-<li><a href="#orgdaf151f">1.2. Details</a></li>
+<li><a href="#org67757e7">1.1. Goals</a></li>
+<li><a href="#org6554fbc">1.2. Details</a></li>
 </ul>
 </li>
-<li><a href="#org17629dd">2. Reading Schedule</a></li>
-<li><a href="#orgfad3791">3. Solutions and Notes</a></li>
-<li><a href="#orgc7cd1b0">4. Further Resources</a></li>
-<li><a href="#org3f76d9e">5. People</a></li>
+<li><a href="#org1fada11">2. Reading Schedule</a></li>
+<li><a href="#orgb28a2a9">3. Solutions and Notes</a></li>
+<li><a href="#orgf31add4">4. Further Resources</a></li>
+<li><a href="#orga64086c">5. People</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orga8b85b6" class="outline-2">
-<h2 id="orga8b85b6"><span class="section-number-2">1</span> Information</h2>
+<div id="outline-container-orgb333d1c" class="outline-2">
+<h2 id="orgb333d1c"><span class="section-number-2">1</span> Information</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Welcome to the website for the University of Toronto Undegraduate Winter Math Reading Group!
@@ -277,8 +277,8 @@ Michael Artin's <i>Algebra</i>. This book is supposed to provide a rigorous and 
 </p>
 </div>
 
-<div id="outline-container-orgda09f35" class="outline-3">
-<h3 id="orgda09f35"><span class="section-number-3">1.1</span> Goals</h3>
+<div id="outline-container-org67757e7" class="outline-3">
+<h3 id="org67757e7"><span class="section-number-3">1.1</span> Goals</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 The goals of this reading group are as follows:
@@ -292,8 +292,8 @@ The goals of this reading group are as follows:
 </div>
 </div>
 
-<div id="outline-container-orgdaf151f" class="outline-3">
-<h3 id="orgdaf151f"><span class="section-number-3">1.2</span> Details</h3>
+<div id="outline-container-org6554fbc" class="outline-3">
+<h3 id="org6554fbc"><span class="section-number-3">1.2</span> Details</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 In this reading group, we respect copyright laws, so if you don't have a copy of Artin's book, you definitely <b>should not</b> Google "Artin Algebra PDF" and download the first link.
@@ -310,8 +310,8 @@ Any inquiries about joining the reading group, or any other questions should be 
 </div>
 </div>
 
-<div id="outline-container-org17629dd" class="outline-2">
-<h2 id="org17629dd"><span class="section-number-2">2</span> Reading Schedule</h2>
+<div id="outline-container-org1fada11" class="outline-2">
+<h2 id="org1fada11"><span class="section-number-2">2</span> Reading Schedule</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 TBD
@@ -319,8 +319,8 @@ TBD
 </div>
 </div>
 
-<div id="outline-container-orgfad3791" class="outline-2">
-<h2 id="orgfad3791"><span class="section-number-2">3</span> Solutions and Notes</h2>
+<div id="outline-container-orgb28a2a9" class="outline-2">
+<h2 id="orgb28a2a9"><span class="section-number-2">3</span> Solutions and Notes</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 The notes and solutions created by the members of the group will be posted here each week.
@@ -328,8 +328,8 @@ The notes and solutions created by the members of the group will be posted here 
 </div>
 </div>
 
-<div id="outline-container-orgc7cd1b0" class="outline-2">
-<h2 id="orgc7cd1b0"><span class="section-number-2">4</span> Further Resources</h2>
+<div id="outline-container-orgf31add4" class="outline-2">
+<h2 id="orgf31add4"><span class="section-number-2">4</span> Further Resources</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Under Construction
@@ -337,8 +337,8 @@ Under Construction
 </div>
 </div>
 
-<div id="outline-container-org3f76d9e" class="outline-2">
-<h2 id="org3f76d9e"><span class="section-number-2">5</span> People</h2>
+<div id="outline-container-orga64086c" class="outline-2">
+<h2 id="orga64086c"><span class="section-number-2">5</span> People</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 The names of the members of the group will be posted below.
@@ -350,13 +350,14 @@ The names of the members of the group will be posted below.
 <li>Peter Ma</li>
 <li>Freeman Cheng</li>
 <li>Diba Heydary</li>
+<li>Daniel Mishan</li>
 </ul>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jack Ceroni</p>
-<p class="date">Created: 2020-11-26 Thu 22:49</p>
+<p class="date">Created: 2020-11-26 Thu 23:13</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
