--- a/index.html
+++ b/index.html
@@ -24,38 +24,31 @@
     <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
     <div style="width:900px;">
     <h3>About Me</h3>
-    <p>Hello there! My name is Jack, and I'm a first-year undergraduate student at the University of Toronto with interests in mathematics, physics, engineering and quantum computing.</p>
-    <p>Over the past couple years, I have had some very interesting experiences.
-This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
-(and in the process, writing some material for an online <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a>),
-and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.
-I'm very involved in open-source quantum computational software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields.
+    <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are simulating quantum systems with quantum computers,
+    mathematical abstraction, and philosophy.</p>
+    <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="#">this page</a>.
     </p>
-    <h3>Current Projects</h3>
+    <h3>Current Project(s)</h3>
 <p>
   I am currently working as
-  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing tutorials on concepts in quantum machine learning and helping to build
-  out their <a href="https://pennylane.ai/">quantum machine learning library</a>.
+  a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing end-to-end hybrid quantum algorithms for calculating properties of molecules.
 </p>
 
-<p>I'm always working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
+<p>The purpose of this website is to neatly store information relating to past/current projects. I'll try to keep this page as up-to-date as possible, but no promises!</p>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
-    </p>
-    <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
     <br>
     <hr class="line" style="width:900px;">
     <br>
-    <h3>Current Projects</h3>
+    <h3>Other Stuff</h3>
     <ul>
 	<br>
-	<a href="./feed.html">The Feed</a>
+	<a href="#">Pseudo-Resume</a>
   <br>
   <a href="./list.html">The List</a>
-	<br><br>
-      <b>UNDER RENOVATIONS (November 20th, 2020)</b>
+	<br>
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
