--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <p>
   I am currently working as
   a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing end-to-end hybrid quantum algorithms for calculating properties of molecules.
+  I'm also (informally) hanging around the <a href="https://sites.google.com/site/jamiesikora/group?authuser=0"> CS Quantum Group @ Virginia Tech</a>, thinking
+  about relationships between quantum information and number theory.
 </p>
 
 <p>The purpose of this website is to neatly store information relating to past/current projects. I'll try to keep this page as up-to-date as possible, but no promises!</p>
