--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
     <div style="width:900px;">
     <h3>About Me</h3>
-    <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are simulating quantum systems with quantum computers,
+    <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are related to simulating quantum systems with quantum computers,
     mathematical abstraction, and philosophy.</p>
     <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="#">this page</a>.
     </p>
