--- a/old_index.html
+++ b/old_index.html
@@ -7,17 +7,23 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" id="">
 </script>
-<link rel="stylesheet" href="https://latex.now.sh/style.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141929899-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+ gtag('config', 'UA-141929899-1');
+</script>
 </head>
 
-<body style="max-width:100ch">
-	<header>
-		<center>
-		<h2>Jack Ceroni's Home Page</h2>
-		</center>
-	</header>
-	<h3>About</h3>
-
+<body>
+  <center>
+    <div style="display:inline-block;text-align:left;">
+    <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
+    <div style="width:900px;">
+    <h3>About Me</h3>
     <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are related to simulating quantum systems with quantum computers,
     mathematical abstraction, and philosophy.</p>
     <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="#">this page</a>.
@@ -35,6 +41,42 @@
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
+    <br>
+    <hr class="line" style="width:900px;">
+    <br>
+    <h3>Other Stuff</h3>
+    <ul>
+	<br>
+	<a href="#">Pseudo-Resume</a>
+  <br>
+  <a href="./list.html">The List</a>
+	<br>
+    </ul>
+    <br>
+    <hr class="line" style="width:900px;float:left;">
+    </div>
+    </div>
+  </center>
 </body>
-
+<style>
+body {
+	font-family:"Lucida Console", Monaco, monospace;
+ }
+ul {
+     font-size:12px;
+ }
+ p {
+     font-size:12px;
+ }
+ .line {
+     border:0;
+     height:1px;
+     float:left;
+     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+ }
+ a:hover{text-decoration:none;color:grey}a{color:#000;}
+</style>
 </html>
