--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are related to simulating quantum systems with quantum computers,
     mathematical abstraction, and philosophy.</p>
-    <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="#">this page</a>.
+    <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="./cv.html">this page</a>.
     </p>
     <h3>Current Project(s)</h3>
 <p>
