--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
+
+    <br>
+
+    <center>
+        <img src="assets/duomo.jpg" style="height:800px;">
+        <i>Taken during a trip to Italy. A reminder to create beautiful things.</i>
+    </center>
 </body>
 
 </html>
