--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
 
     <center>
-        <img src="assets/duomo.jpg" style="height:800px;">
+        <img src="./assets/duomo.jpg" style="height:800px;">
         <i>Taken during a trip to Italy. A reminder to create beautiful things.</i>
     </center>
 </body>
