--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
 
 	<h3>Education</h3>
 
-	<b>September 2020 - Present</b>, Mathematics Specialist, University of Toronto, GPA: 4.0/4.0
+	<b>September 2020 - Present</b>, Mathematics Specialist, University of Toronto
 
 	<h3>Experience</h3>
 
@@ -47,6 +47,12 @@
 
 	<li>Made other, minor contributions to the PennyLane codebase.</li>
 	</ul>
+
+  <h3>Publications and Preprints</h3>
+
+  <ul>
+      <li><i>Differentiable quantum computational chemistry with PennyLane</i> <a href="https://arxiv.org/abs/2111.09967">[arXiv:2111.09967]</a></li>
+  </ul>
 
 	<h3>Other</h3>
 
