--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <p>The purpose of this website is to neatly store information relating to past/current projects. I'll try to keep this page as up-to-date as possible, but no promises!</p>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
 
