--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,13 @@
 
 	<h3>Experience</h3>
 
-	<b>May 2021 - Present</b>, Quantum Resident, Xanadu Quantum Technologies
+	<b>May 2022 - September 2022</b>, Quantum Resident, Xanadu Quantum Technologies
+
+	<ul>
+		<li>Again!</li>
+	</ul>
+
+	<b>May 2021 - September 2021</b>, Quantum Resident, Xanadu Quantum Technologies
 
 	<ul>
 		<li>Working under the supervision of the quantum algorithms team on building 
@@ -51,6 +57,7 @@
   <h3>Publications and Preprints</h3>
 
   <ul>
+	 <li><i>Tailgating quantum circuits for high-order energy derivatives</i> <a href="https://arxiv.org/abs/2207.11274">[arXiv:2207.11274]</a></li>
       <li><i>Differentiable quantum computational chemistry with PennyLane</i> <a href="https://arxiv.org/abs/2111.09967">[arXiv:2111.09967]</a></li>
   </ul>
 
