--- a/index.html
+++ b/index.html
@@ -17,31 +17,33 @@
 		</center>
 	</header>
 	<h3>About</h3>
-
-    <p>I'm currently a second-year undergraduate student at the University of Toronto, pursuing a degree in pure mathematics. Broadly, my interests are related to simulating quantum systems with quantum computers,
-    mathematical abstraction, and philosophy.</p>
-    <p>Over the past few years, I have had some very interesting experiences. For more details, see <a href="./cv.html">this page</a>.
+    <p>I am a research scientist at [REDACTED]: a stealth startup founded in Fall 2022. My work focuses on quantum computation, machine learning, chemistry, and physics. 
+      Before this, I worked as a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing 
+      quantum algorithms for performing chemical calculations.
     </p>
-    <h3>Current Project(s)</h3>
-<p>
-  I am currently working as
-  a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing end-to-end hybrid quantum algorithms for calculating properties of molecules.
-  I'm also (informally) hanging around the <a href="https://sites.google.com/site/jamiesikora/group?authuser=0"> CS Quantum Group @ Virginia Tech</a>, thinking
-  about relationships between quantum information and number theory.
-</p>
 
-<p>The purpose of this website is to neatly store information relating to past/current projects. I'll try to keep this page as up-to-date as possible, but no promises!</p>
+    <p>Outside of [REDACTED], I've completed two years of a pure math degree at the University of Toronto, but am taking a break of undetermined length to work 
+      (although I'm still working on some research with <a href="https://scholar.google.ca/citations?user=DSgKHOQAAAAJ&hl=en">Prof. Nathan Wiebe</a>).
+      Broadly, my academic interests are related to fault-tolerant quantum algorithms, novel techniques for simulating quantum systems, mathematical abstraction, and philosophy.</p>
+    <p>For a painfully outdated CV, see <a href="./cv.html">this page</a>.
+    </p>
+
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
-    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
+    <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://jackceroni.substack.com/">Substack (Galt's Gulch)</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
 
     <br>
 
-    <center>
-        <img src="./assets/duomo.JPG" style="height:800px;">
-        <i>Taken during a trip to Italy. A reminder to create beautiful things.</i>
-    </center>
-</body>
+    <center> 
+        <i>Some inspiration. Taken during trips to Italy, England, Greece. A reminder to create beautiful things.</i>
+        </center>
+        <br>
+        <div class="row" style="display:flex;padding-bottom:10px;">
+        <img src="./assets/duomo.JPG" style="height:500px;">
+        <img src="./assets/england.jpg" style="height:500px;padding-left:10px;">
+    </div>
+        <img src="./assets/athens.jpeg">
+        </body>
 
 </html>
