--- a/index.html
+++ b/index.html
@@ -17,18 +17,21 @@
 		</center>
 	</header>
 	<h3>About</h3>
-    <p>I am a research scientist at [REDACTED]: a stealth startup founded in Fall 2022. My work focuses on quantum computation, machine learning, chemistry, and physics. 
-      Before this, I worked as a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing 
+  <p>I am a third-year pure mathematics student at the University of Toronto. Right now, I'm working at the Massachusetts Institute of Technology on the theory of quantum algorithmic primitives, under the supervision of
+      <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en"> Professor Isaac Chuang</a>.
+      Before this, I was the first non-founding employee at a stealth quantum/machine learning startup (I took a gap year from 2022-2023 to do this), and
+      before that I was a research intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing
       quantum algorithms for performing chemical calculations.
     </p>
 
-    <p>Outside of [REDACTED], I've completed two years of a pure math degree at the University of Toronto, but am taking a break of undetermined length to work 
-      (although I'm still working on some research with <a href="https://scholar.google.ca/citations?user=DSgKHOQAAAAJ&hl=en">Prof. Nathan Wiebe</a>).
-      Broadly, my academic interests are related to fault-tolerant quantum algorithms, novel techniques for simulating quantum systems, mathematical abstraction, and philosophy.</p>
-    <p>For a painfully outdated CV, see <a href="./cv.html">this page</a>.
+    <p>Outside of my primary job/education, I do research with <a href="https://scholar.google.ca/citations?user=DSgKHOQAAAAJ&hl=en">Professor Nathan Wiebe</a> on quantum algorithms.
+        Broadly, my academic interests are related to the synthesis of pure mathematics with fault-tolerant quantum algorithms and quantum simulation, as well as <a href="https://scholar.google.com/citations?user=PRjgI8kAAAAJ&hl=en">complexity</a>.
+    </p>
+    <p>For my CV, click <a href="./cv.pdf">here</a>. It's probably at least somewhat out of date at any given point in time.
     </p>
 
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
+    <p><b>New:</b> Check out my new-and-improved knowledge repository, <a href="https://thecoherentstate.github.io">The Coherent State</a>. I'm planning on writing a lot more here, in the near future.</p>
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://jackceroni.substack.com/">Substack (Galt's Gulch)</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a> | <a href="https://scholar.google.com/citations?user=I9NmuAsAAAAJ&hl=en">Google Scholar</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
